# parcialSoftware

./: .pre-commit-config.yaml  locustfile.py  main.py  pyproject.toml
.github/workflows/: python-package-conda.yml
controllers/: controller.py
models/: contacto.py
tests/: test_contacto.py  test_controller.py
views/: view.py
